# sciml-framework

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
configs/: dengue.yaml  swe.yaml  wave_obstacle.yaml
docs/: README.md  architecture.md  datasets.md  extending.md  methods.md  overview.md  problems.md  reference.md
examples/: 01_linear_ode_sindy.py  02_harmonic_oscillator_dmd.py  03_lotka_volterra_sindy.py  04_lorenz_sindy.py  05_heat_fno.py  06_burgers_fno.py  07_lotka_volterra_neural_ode.py  08_advection_diffusion_deeponet.py  09_wave1d_pinn.py  10_kuramoto_sivashinsky_dmd.py  11_darcy_fno2d.py  12_van_der_pol_sindy.py  13_fitzhugh_nagumo_sindy.py  README.md
experiments/epidemiology/: run.py
experiments/swe/: ablation.py  evaluate.py  nd_scaling.py  physics_attractor.py  train.py
experiments/wave_obstacle/: run.py
experiments/wnts/: REPORT.md  __init__.py  ablation_inputs.py  ablation_library.py  ablation_states.py  benchmark_dmdc.py  data.py  multi_year.py  run.py  sweep_hyper.py
src/sciml/: __init__.py  cli.py  tf_utils.py
src/sciml/core/: __init__.py  config.py  derivatives.py  io.py  logging.py  metrics.py  plotting.py  seeding.py
src/sciml/data/: __init__.py  gp.py  interp.py
src/sciml/data/datasets/: __init__.py  base.py  synthetic.py  wnts.py
src/sciml/methods/: __init__.py
src/sciml/methods/deeponet/: __init__.py  mlp.py  operator.py  optim.py  trainer.py
src/sciml/methods/dmd/: __init__.py  dmd.py
src/sciml/methods/fno/: __init__.py  model.py  spectral.py
src/sciml/methods/neuralode/: __init__.py  integrators.py  model.py
src/sciml/methods/pinn/: __init__.py  gradients.py  layers.py  networks.py  sampling.py  training.py
src/sciml/methods/sindy/: __init__.py  library.py  model.py  sparse.py
src/sciml/problems/: __init__.py  base.py
src/sciml/problems/epidemiology/: __init__.py  config.py  estimators.py  problem.py  reconstruction.py  runners.py
src/sciml/problems/swe/: __init__.py  cases.py  config.py  evaluation.py  model.py  physics.py  problem.py  runners.py
src/sciml/problems/wave_obstacle/: __init__.py  config.py  problem.py  runners.py
src/sciml/solvers/: __init__.py  burgers.py  compartmental.py  darcy.py  dynamical.py  heat.py  kuramoto_sivashinsky.py  swe_lax_friedrichs.py  transport.py  wave1d.py  wave_fdm.py
src/sciml/tasks/: __init__.py  sysid.py
tests/: test_config.py  test_core.py  test_data.py  test_datasets.py  test_dmd.py  test_epidemiology.py  test_examples_numpy.py  test_methods_tf.py  test_sindy.py  test_solvers.py  test_solvers_extra.py  test_solvers_pde.py  test_sysid.py
