[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciml"
version = "0.2.0"
description = "A scientific-machine-learning research framework: DeepONet, PINN and SINDy methods over a shared core, with worked examples."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Aditya Firman Ihsan" }, { name = "sciml contributors" }]
keywords = ["scientific-machine-learning", "deeponet", "pinn", "sindy",
            "operator-learning", "physics-informed", "system-identification", "pde"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core is pure-numpy / pandas so the shared utilities, solvers, SINDy core and
# data tooling import without a deep-learning backend. Heavier method
# dependencies are optional extras.
dependencies = [
    "numpy>=1.23",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/phoenixfin/sciml-framework"
Repository = "https://github.com/phoenixfin/sciml-framework"
Documentation = "https://github.com/phoenixfin/sciml-framework/tree/main/docs"
Issues = "https://github.com/phoenixfin/sciml-framework/issues"

[project.optional-dependencies]
# Neural methods (DeepONet, PINN, FNO, Neural ODE) need TensorFlow;
# PINN's L-BFGS phase needs SciPy. DMD/Koopman is pure numpy (no extra).
deeponet = ["tensorflow>=2.12,<2.17"]
pinn = ["tensorflow>=2.12,<2.17", "scipy>=1.9"]
fno = ["tensorflow>=2.12,<2.17"]
neuralode = ["tensorflow>=2.12,<2.17"]
# SINDy *core* is pure numpy; the epidemiology example adds these for global
# LASSO regression and spreadsheet loading.
sindy = ["scikit-learn>=1.1", "pandas>=1.5", "openpyxl>=3.0"]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=7.0", "pyyaml>=6.0", "interrogate>=1.5", "pydocstyle>=6.0",
       "pydoclint>=0.4", "ruff>=0.4", "pre-commit>=3.0"]
docs = ["pdoc>=14.0"]
all = [
    "tensorflow>=2.12,<2.17", "scipy>=1.9",
    "scikit-learn>=1.1", "pandas>=1.5", "openpyxl>=3.0",
    "pyyaml>=6.0", "pytest>=7.0",
]

[project.scripts]
sciml = "sciml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sciml = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Pyflakes (F), pycodestyle errors/warnings (E/W), import sorting (I).
# Deliberately NOT enabling pyupgrade (UP) — it would rewrite typing.List/Optional
# in signatures and break the docstring<->signature type matching pydoclint enforces.
select = ["E", "F", "W", "I"]
# E741: ``I`` is the standard symbol for the infected compartment.
# E702/E731: terse multi-statement lines and small lambdas are an intentional style.
ignore = ["E741", "E702", "E731"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # re-exports are the public API

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.interrogate]
# Docstring-coverage gate for the public API (run: `interrogate src`).
fail-under = 100
ignore-init-method = true
ignore-magic = true
ignore-nested-functions = true
ignore-private = true
ignore-semiprivate = true
exclude = ["experiments", "examples", "tests"]

[tool.pydocstyle]
# PEP 257 style; relax a few conventions that don't fit terse research code.
convention = "pep257"
add-ignore = "D105,D107,D203,D212,D401,D413"

[tool.pydoclint]
# NumPy-style docstrings: every parameter and return must be documented.
# Types live in the signatures (not duplicated in docstrings); dataclass
# attributes are documented with inline `#:` comments, not an Attributes block.
style = "numpy"
arg-type-hints-in-docstring = true
check-return-types = false
check-yield-types = false
check-class-attributes = false
skip-checking-short-docstrings = false
allow-init-docstring = true
